force-app/sfpegQueueableUtility/objects/sfpegQueueableLog__c/sfpegQueueableLog__c.object-meta.xml
<CustomObject>
    <description>Monitoring object tracking the execution of Queueable processes and providing various statistics (see sfpegQueueable_UTL framework).</description>
    <label>Queueable Log</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Queueable Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>