force-app/sfpegQueueableUtility/objects/sfpegQueueableLog__c/fields/CalloutNbr__c.field-meta.xml
<CustomField>
    <fullName>CalloutNbr__c</fullName>
    <description>Total number of callouts executed</description>
    <label>Callout Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>