force-app/sfpegQueueableUtility/objects/sfpegQueueableLog__c/fields/CalloutNbrAvg__c.field-meta.xml
<CustomField>
    <fullName>CalloutNbrAvg__c</fullName>
    <formula>CalloutNbr__c /  JobNbr__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Callout Number</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>