force-app/sfpegQueueableUtility/objects/sfpegQueueableLog__c/fields/CPUTime__c.field-meta.xml
<CustomField>
    <fullName>CPUTime__c</fullName>
    <description>Total CPU time consumed (in ms)</description>
    <label>CPU Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>