force-app/sfpegQueueableUtility/objects/sfpegQueueableLog__c/fields/CPUTimeAvg__c.field-meta.xml
<CustomField>
    <fullName>CPUTimeAvg__c</fullName>
    <formula>CPUTime__c /  JobNbr__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average CPU Time</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>