force-app/sfpegQueueableUtility/objects/sfpegQueueableLog__c/fields/ExternalID__c.field-meta.xml
<CustomField>
    <fullName>ExternalID__c</fullName>
    <description>Unique external ID for each log record (to cope with parallel registrations)</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>