force-app/sfpegQueueableUtility/objects/sfpegQueueableLog__c/fields/JobEmptyNbr__c.field-meta.xml
<CustomField>
    <fullName>JobEmptyNbr__c</fullName>
    <description>Number of Jobs executed with no record</description>
    <label>Jobs Empty Number</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>