force-app/sfpegQueueableUtility/objects/sfpegQueueableLog__c/fields/JobEmptyRatio__c.field-meta.xml
<CustomField>
    <fullName>JobEmptyRatio__c</fullName>
    <formula>JobEmptyNbr__c /  JobNbr__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Empty Jobs Ratio</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>