force-app/sfpegQueueableUtility/objects/sfpegQueueableLog__c/fields/JobFailNbr__c.field-meta.xml
<CustomField>
    <fullName>JobFailNbr__c</fullName>
    <description>Number of Jobs having failed records</description>
    <label>Jobs Failed Number</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>