force-app/sfpegQueueableUtility/objects/sfpegQueueableLog__c/fields/JobFailRatio__c.field-meta.xml
<CustomField>
    <fullName>JobFailRatio__c</fullName>
    <formula>JobFailNbr__c /  JobNbr__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Jobs Failed Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>