force-app/sfpegQueueableUtility/objects/sfpegQueueableLog__c/fields/JobNbr__c.field-meta.xml
<CustomField>
    <fullName>JobNbr__c</fullName>
    <description>Number of occurences of the queueable process.</description>
    <label>Jobs Number</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>