force-app/sfpegQueueableUtility/objects/sfpegQueueableLog__c/fields/LastContext__c.field-meta.xml
<CustomField>
    <fullName>LastContext__c</fullName>
    <description>Execution context data to be persisted for future launches.
May contain e.g. TimeStamp of last execution or ID of last processed record.</description>
    <label>Last Context</label>
    <length>255</length>
    <type>Text</type>
</CustomField>