force-app/sfpegQueueableUtility/objects/sfpegQueueableLog__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Concatenation of job execution messages (possibly truncated if too many).</description>
    <label>Message</label>
    <length>125000</length>
    <type>Html</type>
</CustomField>