force-app/sfpegQueueableUtility/objects/sfpegQueueableLog__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <description>Starting DateTime of the log period</description>
    <label>Period</label>
    <type>DateTime</type>
</CustomField>