force-app/sfpegQueueableUtility/objects/sfpegQueueableLog__c/fields/ProcessName__c.field-meta.xml
<CustomField>
    <fullName>ProcessName__c</fullName>
    <description>Name of the Queuable class processed</description>
    <label>Process Name</label>
    <length>35</length>
    <type>Text</type>
</CustomField>