force-app/sfpegQueueableUtility/objects/sfpegQueueableLog__c/fields/RcdFailNbr__c.field-meta.xml
<CustomField>
    <fullName>RcdFailNbr__c</fullName>
    <description>Number of records processed with failure.</description>
    <label>Record Failed Number</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>