force-app/sfpegQueueableUtility/objects/sfpegQueueableLog__c/fields/RcdFailNbrAvg__c.field-meta.xml
<CustomField>
    <fullName>RcdFailNbrAvg__c</fullName>
    <formula>RcdFailNbr__c /  JobNbr__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Records Failed</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>