force-app/sfpegQueueableUtility/objects/sfpegQueueableLog__c/fields/RcdFailNbrRatio__c.field-meta.xml
<CustomField>
    <fullName>RcdFailNbrRatio__c</fullName>
    <formula>RcdFailNbr__c  / MAX(1, RcdNbr__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Records Failed Ratio</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>