force-app/sfpegQueueableUtility/objects/sfpegQueueableLog__c/fields/RcdNbr__c.field-meta.xml
<CustomField>
    <fullName>RcdNbr__c</fullName>
    <description>Number of records processed</description>
    <label>Record Number</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>