force-app/sfpegQueueableUtility/objects/sfpegQueueableLog__c/fields/RcdNbrAvg__c.field-meta.xml
<CustomField>
    <fullName>RcdNbrAvg__c</fullName>
    <formula>RcdNbr__c / JobNbr__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Record Number</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>