force-app/sfpegQueueableUtility/objects/sfpegQueueableLog__c/fields/WaitTime__c.field-meta.xml
<CustomField>
    <fullName>WaitTime__c</fullName>
    <description>Cumulated Wait Time of the queuable process</description>
    <label>Wait Time</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>