force-app/sfpegQueueableUtility/objects/sfpegQueueableLog__c/fields/WaitTimeAvg__c.field-meta.xml
<CustomField>
    <fullName>WaitTimeAvg__c</fullName>
    <description>Average Wait Time for the Jobs run.</description>
    <formula>WaitTime__c /  JobNbr__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Wait Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>