force-app/sfpegQueueableUtility/objects/sfpegQueueableLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ProcessName__c</columns>
    <columns>Period__c</columns>
    <columns>JobNbr__c</columns>
    <columns>JobFailNbr__c</columns>
    <columns>JobEmptyNbr__c</columns>
    <columns>RcdNbr__c</columns>
    <columns>RcdFailNbr__c</columns>
    <columns>CPUTime__c</columns>
    <columns>WaitTime__c</columns>
    <columns>CalloutNbr__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>